<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/offline"
        android:visible="false">
        <item
            android:id="@+id/action_offline"
            android:orderInCategory="10"
            android:title="@string/action_offline"
            android:icon="@drawable/ic_offline"
            app:showAsAction="always" />
    </group>

    <item
        android:id="@+id/action_unblock"
        android:orderInCategory="100"
        android:title="@string/action_restore"
        android:icon="@drawable/ic_restore"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/single_selection"
        android:visible="true">
        <item
            android:id="@+id/action_mute"
            android:orderInCategory="200"
            android:title="@string/action_mute"
            android:icon="@drawable/ic_notifications_off"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_unmute"
            android:orderInCategory="201"
            android:title="@string/action_unmute"
            android:icon="@drawable/ic_notifications"
            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_archive"
            android:orderInCategory="202"
            android:title="@string/action_archive"
            android:icon="@drawable/ic_archive"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_unarchive"
            android:orderInCategory="203"
            android:title="@string/action_unarchive"
            android:icon="@drawable/ic_unarchive"
            android:visible="false"
            app:showAsAction="ifRoom" />
    </group>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>