<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:visible="false">
        <item
            android:id="@+id/action_send_now"
            android:icon="@drawable/ic_retry"
            android:orderInCategory="100"
            android:title="@string/action_send_now"
            app:showAsAction="always"/>
    </group>

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:orderInCategory="101"
        android:title="@string/action_reply"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:orderInCategory="103"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom"/>

</menu>