<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:title="@string/action_attach"
        android:icon="@drawable/ic_attach"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view_contact"
        android:orderInCategory="101"
        android:title="@string/action_view_contact"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_clear_messages"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mute"
        android:orderInCategory="103"
        android:title="@string/action_mute"
        android:icon="@drawable/ic_notifications_off"
        app:showAsAction="never" />
</menu>