<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/offline"
        android:visible="false">
        <item
            android:id="@+id/action_offline"
            android:orderInCategory="10"
            android:title="@string/action_offline"
            android:icon="@drawable/ic_offline"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    </group>

    <group android:id="@+id/not_archive">
        <item
            android:id="@+id/action_show_archive"
            android:orderInCategory="101"
            android:title="@string/action_show_archive"
            android:icon="@drawable/ic_filecab"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="102"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="never" />
    </group>

</menu>