<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/offline"
        android:visible="false">
        <item
            android:id="@+id/action_offline"
            android:orderInCategory="10"
            android:title="@string/action_offline"
            android:icon="@drawable/ic_offline"
            app:showAsAction="always" />
    </group>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mute"
        android:orderInCategory="101"
        android:title="@string/action_mute"
        android:icon="@drawable/ic_notifications_off"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="102"
        android:title="@string/action_edit_contact"
        android:icon="@drawable/ic_mode_edit"
        app:showAsAction="ifRoom" />

</menu>