<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingEnd="@dimen/dialog_padding_right"
              android:paddingLeft="@dimen/dialog_padding_left"
              android:paddingRight="@dimen/dialog_padding_right"
              android:paddingStart="@dimen/dialog_padding_left">

    <TextView
        android:id="@+id/buttonViewProfile"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_person"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/view_profile"/>

    <TextView
        android:id="@+id/buttonSendMessage"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_chat_grey"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_chat_grey"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/send_message"/>


    <TextView
        android:id="@+id/buttonPermissions"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_checklist_grey"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_checklist_grey"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/change_permissions"/>


    <TextView
        android:id="@+id/buttonMakeOwner"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_flag"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_flag"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/make_owner"/>

    <TextView
        android:id="@+id/buttonRemove"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_exit_grey"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_exit_grey"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/remove_from_group"/>

    <TextView
        android:id="@+id/buttonBlock"
        style="@style/textSecondary"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_block"
        android:drawablePadding="4sp"
        android:drawableStart="@drawable/ic_block"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/block"/>

</LinearLayout>